// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mode1Row snapshots the left-side color-match row 1`] = `
<View
  style={
    [
      {
        "marginBottom": 12,
        "maxWidth": "92%",
      },
      {
        "alignSelf": "flex-start",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "gap": 8,
        },
        {
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "alignSelf": "flex-start",
          },
          undefined,
          {
            "borderRadius": 11,
            "height": 22,
            "shadowColor": "#047857",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.5,
            "shadowRadius": 10,
            "width": 22,
          },
        ]
      }
    >
      <ViewManagerAdapter_ExpoLinearGradient
        colors={
          [
            4281652121,
            4278483031,
          ]
        }
        endPoint={
          [
            1,
            1,
          ]
        }
        startPoint={
          [
            0,
            0,
          ]
        }
        style={
          [
            {
              "alignItems": "center",
              "justifyContent": "center",
            },
            {
              "borderRadius": 11,
              "height": 22,
              "width": 22,
            },
          ]
        }
      >
        <Text
          accessibilityLabel="Nova"
          style={
            [
              {
                "color": "#ffffff",
                "fontFamily": "ChakraPetch-Bold",
                "fontWeight": "700",
              },
              {
                "fontSize": 9,
                "textShadowColor": "rgba(255,255,255,0.2)",
              },
            ]
          }
        >
          N
        </Text>
      </ViewManagerAdapter_ExpoLinearGradient>
    </View>
    <View
      style={
        {
          "gap": 4,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 6,
          }
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderWidth": 1.5,
                "justifyContent": "center",
              },
              {
                "shadowColor": "rgba(16,185,129,0.55)",
                "shadowOffset": {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 12,
              },
              {
                "backgroundColor": "rgba(16,185,129,0.18)",
                "borderColor": "#10b981",
                "borderRadius": 8,
                "height": 36,
                "width": 36,
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "JetBrainsMono-Bold",
                  "fontWeight": "700",
                },
                {
                  "color": "#d1fae5",
                  "fontSize": 17,
                },
              ]
            }
          >
            3
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderWidth": 1.5,
                "justifyContent": "center",
              },
              null,
              {
                "backgroundColor": "rgba(90,90,122,0.2)",
                "borderColor": "#5a5a7a",
                "borderRadius": 8,
                "height": 36,
                "width": 36,
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "JetBrainsMono-Bold",
                  "fontWeight": "700",
                },
                {
                  "color": "#5a5a7a",
                  "fontSize": 17,
                },
              ]
            }
          >
            7
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderWidth": 1.5,
                "justifyContent": "center",
              },
              {
                "shadowColor": "rgba(245,158,11,0.4)",
                "shadowOffset": {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 12,
              },
              {
                "backgroundColor": "rgba(245,158,11,0.2)",
                "borderColor": "#f59e0b",
                "borderRadius": 8,
                "height": 36,
                "width": 36,
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "JetBrainsMono-Bold",
                  "fontWeight": "700",
                },
                {
                  "color": "#fde68a",
                  "fontSize": 17,
                },
              ]
            }
          >
            2
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderWidth": 1.5,
                "justifyContent": "center",
              },
              null,
              {
                "backgroundColor": "rgba(90,90,122,0.2)",
                "borderColor": "#5a5a7a",
                "borderRadius": 8,
                "height": 36,
                "width": 36,
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "JetBrainsMono-Bold",
                  "fontWeight": "700",
                },
                {
                  "color": "#5a5a7a",
                  "fontSize": 17,
                },
              ]
            }
          >
            9
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Mode1Row snapshots the right-side variant 1`] = `
<View
  style={
    [
      {
        "marginBottom": 12,
        "maxWidth": "92%",
      },
      {
        "alignSelf": "flex-end",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "gap": 8,
        },
        {
          "flexDirection": "row-reverse",
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "alignSelf": "flex-start",
          },
          undefined,
          {
            "borderRadius": 11,
            "height": 22,
            "shadowColor": "#1e40af",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.5,
            "shadowRadius": 10,
            "width": 22,
          },
        ]
      }
    >
      <ViewManagerAdapter_ExpoLinearGradient
        colors={
          [
            4284524026,
            4280172719,
          ]
        }
        endPoint={
          [
            1,
            1,
          ]
        }
        startPoint={
          [
            0,
            0,
          ]
        }
        style={
          [
            {
              "alignItems": "center",
              "justifyContent": "center",
            },
            {
              "borderRadius": 11,
              "height": 22,
              "width": 22,
            },
          ]
        }
      >
        <Text
          accessibilityLabel="Shadow"
          style={
            [
              {
                "color": "#ffffff",
                "fontFamily": "ChakraPetch-Bold",
                "fontWeight": "700",
              },
              {
                "fontSize": 9,
                "textShadowColor": "rgba(255,255,255,0.2)",
              },
            ]
          }
        >
          S
        </Text>
      </ViewManagerAdapter_ExpoLinearGradient>
    </View>
    <View
      style={
        {
          "gap": 4,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 6,
          }
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderWidth": 1.5,
                "justifyContent": "center",
              },
              {
                "shadowColor": "rgba(16,185,129,0.55)",
                "shadowOffset": {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 12,
              },
              {
                "backgroundColor": "rgba(16,185,129,0.18)",
                "borderColor": "#10b981",
                "borderRadius": 8,
                "height": 36,
                "width": 36,
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "JetBrainsMono-Bold",
                  "fontWeight": "700",
                },
                {
                  "color": "#d1fae5",
                  "fontSize": 17,
                },
              ]
            }
          >
            3
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderWidth": 1.5,
                "justifyContent": "center",
              },
              null,
              {
                "backgroundColor": "rgba(90,90,122,0.2)",
                "borderColor": "#5a5a7a",
                "borderRadius": 8,
                "height": 36,
                "width": 36,
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "JetBrainsMono-Bold",
                  "fontWeight": "700",
                },
                {
                  "color": "#5a5a7a",
                  "fontSize": 17,
                },
              ]
            }
          >
            7
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderWidth": 1.5,
                "justifyContent": "center",
              },
              {
                "shadowColor": "rgba(245,158,11,0.4)",
                "shadowOffset": {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 12,
              },
              {
                "backgroundColor": "rgba(245,158,11,0.2)",
                "borderColor": "#f59e0b",
                "borderRadius": 8,
                "height": 36,
                "width": 36,
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "JetBrainsMono-Bold",
                  "fontWeight": "700",
                },
                {
                  "color": "#fde68a",
                  "fontSize": 17,
                },
              ]
            }
          >
            2
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderWidth": 1.5,
                "justifyContent": "center",
              },
              null,
              {
                "backgroundColor": "rgba(90,90,122,0.2)",
                "borderColor": "#5a5a7a",
                "borderRadius": 8,
                "height": 36,
                "width": 36,
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "JetBrainsMono-Bold",
                  "fontWeight": "700",
                },
                {
                  "color": "#5a5a7a",
                  "fontSize": 17,
                },
              ]
            }
          >
            9
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Mode2Row snapshots the row 1`] = `
<View
  style={
    [
      {
        "marginBottom": 12,
        "maxWidth": "92%",
      },
      {
        "alignSelf": "flex-start",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "gap": 8,
        },
        {
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "alignSelf": "flex-start",
          },
          undefined,
          {
            "borderRadius": 11,
            "height": 22,
            "shadowColor": "#047857",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.5,
            "shadowRadius": 10,
            "width": 22,
          },
        ]
      }
    >
      <ViewManagerAdapter_ExpoLinearGradient
        colors={
          [
            4281652121,
            4278483031,
          ]
        }
        endPoint={
          [
            1,
            1,
          ]
        }
        startPoint={
          [
            0,
            0,
          ]
        }
        style={
          [
            {
              "alignItems": "center",
              "justifyContent": "center",
            },
            {
              "borderRadius": 11,
              "height": 22,
              "width": 22,
            },
          ]
        }
      >
        <Text
          accessibilityLabel="Nova"
          style={
            [
              {
                "color": "#ffffff",
                "fontFamily": "ChakraPetch-Bold",
                "fontWeight": "700",
              },
              {
                "fontSize": 9,
                "textShadowColor": "rgba(255,255,255,0.2)",
              },
            ]
          }
        >
          N
        </Text>
      </ViewManagerAdapter_ExpoLinearGradient>
    </View>
    <View
      style={
        {
          "gap": 4,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 6,
          }
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderWidth": 1.5,
                "justifyContent": "center",
              },
              null,
              {
                "backgroundColor": "#15172e",
                "borderColor": "#2a2c54",
                "borderRadius": 8,
                "height": 36,
                "width": 36,
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "JetBrainsMono-Bold",
                  "fontWeight": "700",
                },
                {
                  "color": "#f5f5f7",
                  "fontSize": 17,
                },
              ]
            }
          >
            5
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderWidth": 1.5,
                "justifyContent": "center",
              },
              null,
              {
                "backgroundColor": "#15172e",
                "borderColor": "#2a2c54",
                "borderRadius": 8,
                "height": 36,
                "width": 36,
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "JetBrainsMono-Bold",
                  "fontWeight": "700",
                },
                {
                  "color": "#f5f5f7",
                  "fontSize": 17,
                },
              ]
            }
          >
            0
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderWidth": 1.5,
                "justifyContent": "center",
              },
              null,
              {
                "backgroundColor": "#15172e",
                "borderColor": "#2a2c54",
                "borderRadius": 8,
                "height": 36,
                "width": 36,
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "JetBrainsMono-Bold",
                  "fontWeight": "700",
                },
                {
                  "color": "#f5f5f7",
                  "fontSize": 17,
                },
              ]
            }
          >
            0
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderWidth": 1.5,
                "justifyContent": "center",
              },
              null,
              {
                "backgroundColor": "#15172e",
                "borderColor": "#2a2c54",
                "borderRadius": 8,
                "height": 36,
                "width": 36,
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "JetBrainsMono-Bold",
                  "fontWeight": "700",
                },
                {
                  "color": "#f5f5f7",
                  "fontSize": 17,
                },
              ]
            }
          >
            0
          </Text>
        </View>
      </View>
      <View
        style={
          [
            {
              "marginTop": 6,
            },
            {
              "alignItems": "flex-start",
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "alignSelf": "flex-start",
                "borderRadius": 999,
                "borderWidth": 1,
                "paddingHorizontal": 10,
                "paddingVertical": 3,
              },
              {
                "backgroundColor": "rgba(6,182,212,0.1)",
                "borderColor": "rgba(6,182,212,0.4)",
              },
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 11,
                  "letterSpacing": 1.54,
                  "textTransform": "uppercase",
                },
                {
                  "color": "#06b6d4",
                },
              ]
            }
          >
            ▼ Lower
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Mode3Row snapshots the row 1`] = `
<View
  style={
    [
      {
        "marginBottom": 12,
        "maxWidth": "92%",
      },
      {
        "alignSelf": "flex-start",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "gap": 8,
        },
        {
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "alignSelf": "flex-start",
          },
          undefined,
          {
            "borderRadius": 11,
            "height": 22,
            "shadowColor": "#047857",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.5,
            "shadowRadius": 10,
            "width": 22,
          },
        ]
      }
    >
      <ViewManagerAdapter_ExpoLinearGradient
        colors={
          [
            4281652121,
            4278483031,
          ]
        }
        endPoint={
          [
            1,
            1,
          ]
        }
        startPoint={
          [
            0,
            0,
          ]
        }
        style={
          [
            {
              "alignItems": "center",
              "justifyContent": "center",
            },
            {
              "borderRadius": 11,
              "height": 22,
              "width": 22,
            },
          ]
        }
      >
        <Text
          accessibilityLabel="Nova"
          style={
            [
              {
                "color": "#ffffff",
                "fontFamily": "ChakraPetch-Bold",
                "fontWeight": "700",
              },
              {
                "fontSize": 9,
                "textShadowColor": "rgba(255,255,255,0.2)",
              },
            ]
          }
        >
          N
        </Text>
      </ViewManagerAdapter_ExpoLinearGradient>
    </View>
    <View
      style={
        {
          "gap": 4,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 6,
          }
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderWidth": 1.5,
                "justifyContent": "center",
              },
              null,
              {
                "backgroundColor": "#15172e",
                "borderColor": "#2a2c54",
                "borderRadius": 8,
                "height": 36,
                "width": 36,
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "JetBrainsMono-Bold",
                  "fontWeight": "700",
                },
                {
                  "color": "#f5f5f7",
                  "fontSize": 17,
                },
              ]
            }
          >
            3
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderWidth": 1.5,
                "justifyContent": "center",
              },
              null,
              {
                "backgroundColor": "#15172e",
                "borderColor": "#2a2c54",
                "borderRadius": 8,
                "height": 36,
                "width": 36,
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "JetBrainsMono-Bold",
                  "fontWeight": "700",
                },
                {
                  "color": "#f5f5f7",
                  "fontSize": 17,
                },
              ]
            }
          >
            7
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderWidth": 1.5,
                "justifyContent": "center",
              },
              null,
              {
                "backgroundColor": "#15172e",
                "borderColor": "#2a2c54",
                "borderRadius": 8,
                "height": 36,
                "width": 36,
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "JetBrainsMono-Bold",
                  "fontWeight": "700",
                },
                {
                  "color": "#f5f5f7",
                  "fontSize": 17,
                },
              ]
            }
          >
            2
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderWidth": 1.5,
                "justifyContent": "center",
              },
              null,
              {
                "backgroundColor": "#15172e",
                "borderColor": "#2a2c54",
                "borderRadius": 8,
                "height": 36,
                "width": 36,
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "JetBrainsMono-Bold",
                  "fontWeight": "700",
                },
                {
                  "color": "#f5f5f7",
                  "fontSize": 17,
                },
              ]
            }
          >
            9
          </Text>
        </View>
        <View
          style={
            {
              "marginLeft": 8,
            }
          }
        >
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 6,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontFamily": "JetBrainsMono-Bold",
                    "fontSize": 15,
                    "fontWeight": "700",
                  },
                  {
                    "color": "#10b981",
                  },
                ]
              }
            >
              +
              1
            </Text>
            <Text
              style={
                [
                  {
                    "fontFamily": "JetBrainsMono-Bold",
                    "fontSize": 15,
                    "fontWeight": "700",
                  },
                  {
                    "color": "#ef4444",
                  },
                ]
              }
            >
              −
              2
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Mode4Row snapshots the row 1`] = `
<View
  style={
    [
      {
        "marginBottom": 12,
        "maxWidth": "92%",
      },
      {
        "alignSelf": "flex-start",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "gap": 8,
        },
        {
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "alignSelf": "flex-start",
          },
          undefined,
          {
            "borderRadius": 11,
            "height": 22,
            "shadowColor": "#047857",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.5,
            "shadowRadius": 10,
            "width": 22,
          },
        ]
      }
    >
      <ViewManagerAdapter_ExpoLinearGradient
        colors={
          [
            4281652121,
            4278483031,
          ]
        }
        endPoint={
          [
            1,
            1,
          ]
        }
        startPoint={
          [
            0,
            0,
          ]
        }
        style={
          [
            {
              "alignItems": "center",
              "justifyContent": "center",
            },
            {
              "borderRadius": 11,
              "height": 22,
              "width": 22,
            },
          ]
        }
      >
        <Text
          accessibilityLabel="Nova"
          style={
            [
              {
                "color": "#ffffff",
                "fontFamily": "ChakraPetch-Bold",
                "fontWeight": "700",
              },
              {
                "fontSize": 9,
                "textShadowColor": "rgba(255,255,255,0.2)",
              },
            ]
          }
        >
          N
        </Text>
      </ViewManagerAdapter_ExpoLinearGradient>
    </View>
    <View
      style={
        {
          "gap": 4,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#5a5a7a",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 10,
              "letterSpacing": 1.2,
              "marginBottom": 2,
              "textTransform": "uppercase",
            },
            {
              "textAlign": "left",
            },
          ]
        }
      >
        0:08s
      </Text>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 6,
          }
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderWidth": 1.5,
                "justifyContent": "center",
              },
              {
                "shadowColor": "rgba(16,185,129,0.55)",
                "shadowOffset": {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 12,
              },
              {
                "backgroundColor": "rgba(16,185,129,0.18)",
                "borderColor": "#10b981",
                "borderRadius": 8,
                "height": 36,
                "width": 36,
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "JetBrainsMono-Bold",
                  "fontWeight": "700",
                },
                {
                  "color": "#d1fae5",
                  "fontSize": 17,
                },
              ]
            }
          >
            3
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderWidth": 1.5,
                "justifyContent": "center",
              },
              null,
              {
                "backgroundColor": "rgba(90,90,122,0.2)",
                "borderColor": "#5a5a7a",
                "borderRadius": 8,
                "height": 36,
                "width": 36,
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "JetBrainsMono-Bold",
                  "fontWeight": "700",
                },
                {
                  "color": "#5a5a7a",
                  "fontSize": 17,
                },
              ]
            }
          >
            7
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderWidth": 1.5,
                "justifyContent": "center",
              },
              {
                "shadowColor": "rgba(245,158,11,0.4)",
                "shadowOffset": {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 12,
              },
              {
                "backgroundColor": "rgba(245,158,11,0.2)",
                "borderColor": "#f59e0b",
                "borderRadius": 8,
                "height": 36,
                "width": 36,
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "JetBrainsMono-Bold",
                  "fontWeight": "700",
                },
                {
                  "color": "#fde68a",
                  "fontSize": 17,
                },
              ]
            }
          >
            2
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderWidth": 1.5,
                "justifyContent": "center",
              },
              null,
              {
                "backgroundColor": "rgba(90,90,122,0.2)",
                "borderColor": "#5a5a7a",
                "borderRadius": 8,
                "height": 36,
                "width": 36,
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "JetBrainsMono-Bold",
                  "fontWeight": "700",
                },
                {
                  "color": "#5a5a7a",
                  "fontSize": 17,
                },
              ]
            }
          >
            9
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Mode5Row snapshots the row 1`] = `
<View
  style={
    [
      {
        "marginBottom": 12,
        "maxWidth": "92%",
      },
      {
        "alignSelf": "flex-start",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "gap": 8,
        },
        {
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "alignSelf": "flex-start",
          },
          undefined,
          {
            "borderRadius": 11,
            "height": 22,
            "shadowColor": "#047857",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.5,
            "shadowRadius": 10,
            "width": 22,
          },
        ]
      }
    >
      <ViewManagerAdapter_ExpoLinearGradient
        colors={
          [
            4281652121,
            4278483031,
          ]
        }
        endPoint={
          [
            1,
            1,
          ]
        }
        startPoint={
          [
            0,
            0,
          ]
        }
        style={
          [
            {
              "alignItems": "center",
              "justifyContent": "center",
            },
            {
              "borderRadius": 11,
              "height": 22,
              "width": 22,
            },
          ]
        }
      >
        <Text
          accessibilityLabel="Nova"
          style={
            [
              {
                "color": "#ffffff",
                "fontFamily": "ChakraPetch-Bold",
                "fontWeight": "700",
              },
              {
                "fontSize": 9,
                "textShadowColor": "rgba(255,255,255,0.2)",
              },
            ]
          }
        >
          N
        </Text>
      </ViewManagerAdapter_ExpoLinearGradient>
    </View>
    <View
      style={
        {
          "gap": 4,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 6,
          }
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderWidth": 1.5,
                "justifyContent": "center",
              },
              {
                "shadowColor": "rgba(16,185,129,0.55)",
                "shadowOffset": {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 12,
              },
              {
                "backgroundColor": "rgba(16,185,129,0.18)",
                "borderColor": "#10b981",
                "borderRadius": 8,
                "height": 36,
                "width": 36,
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "JetBrainsMono-Bold",
                  "fontWeight": "700",
                },
                {
                  "color": "#d1fae5",
                  "fontSize": 17,
                },
              ]
            }
          >
            3
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderWidth": 1.5,
                "justifyContent": "center",
              },
              null,
              {
                "backgroundColor": "rgba(31,33,66,0.6)",
                "borderColor": "#4c1d95",
                "borderRadius": 8,
                "height": 36,
                "width": 36,
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "JetBrainsMono-Bold",
                  "fontWeight": "700",
                },
                {
                  "color": "#f5f5f7",
                  "fontSize": 17,
                },
              ]
            }
          >
            4
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderWidth": 1.5,
                "justifyContent": "center",
              },
              {
                "shadowColor": "rgba(16,185,129,0.55)",
                "shadowOffset": {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 12,
              },
              {
                "backgroundColor": "rgba(16,185,129,0.18)",
                "borderColor": "#10b981",
                "borderRadius": 8,
                "height": 36,
                "width": 36,
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "JetBrainsMono-Bold",
                  "fontWeight": "700",
                },
                {
                  "color": "#d1fae5",
                  "fontSize": 17,
                },
              ]
            }
          >
            2
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderWidth": 1.5,
                "justifyContent": "center",
              },
              null,
              {
                "backgroundColor": "rgba(31,33,66,0.6)",
                "borderColor": "#4c1d95",
                "borderRadius": 8,
                "height": 36,
                "width": 36,
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "JetBrainsMono-Bold",
                  "fontWeight": "700",
                },
                {
                  "color": "#f5f5f7",
                  "fontSize": 17,
                },
              ]
            }
          >
            6
          </Text>
        </View>
      </View>
      <View
        style={
          [
            {
              "marginTop": 6,
            },
            {
              "alignItems": "flex-start",
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 6,
            }
          }
        >
          <View
            style={
              [
                {
                  "borderRadius": 4,
                  "height": 8,
                  "width": 8,
                },
                {
                  "backgroundColor": "#10b981",
                  "elevation": 3,
                  "shadowColor": "#10b981",
                  "shadowOffset": {
                    "height": 0,
                    "width": 0,
                  },
                  "shadowOpacity": 1,
                  "shadowRadius": 6,
                },
              ]
            }
          />
          <Text
            style={
              [
                {
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 11,
                  "letterSpacing": 1.54,
                  "textTransform": "uppercase",
                },
                {
                  "color": "#10b981",
                },
              ]
            }
          >
            2 LOCKED
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Mode6Row snapshots the row 1`] = `
<View
  style={
    [
      {
        "marginBottom": 12,
        "maxWidth": "92%",
      },
      {
        "alignSelf": "flex-start",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "gap": 8,
        },
        {
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "alignSelf": "flex-start",
          },
          undefined,
          {
            "borderRadius": 11,
            "height": 22,
            "shadowColor": "#047857",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.5,
            "shadowRadius": 10,
            "width": 22,
          },
        ]
      }
    >
      <ViewManagerAdapter_ExpoLinearGradient
        colors={
          [
            4281652121,
            4278483031,
          ]
        }
        endPoint={
          [
            1,
            1,
          ]
        }
        startPoint={
          [
            0,
            0,
          ]
        }
        style={
          [
            {
              "alignItems": "center",
              "justifyContent": "center",
            },
            {
              "borderRadius": 11,
              "height": 22,
              "width": 22,
            },
          ]
        }
      >
        <Text
          accessibilityLabel="Nova"
          style={
            [
              {
                "color": "#ffffff",
                "fontFamily": "ChakraPetch-Bold",
                "fontWeight": "700",
              },
              {
                "fontSize": 9,
                "textShadowColor": "rgba(255,255,255,0.2)",
              },
            ]
          }
        >
          N
        </Text>
      </ViewManagerAdapter_ExpoLinearGradient>
    </View>
    <View
      style={
        {
          "gap": 4,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#5a5a7a",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 10,
              "letterSpacing": 1.2,
              "marginBottom": 2,
              "textTransform": "uppercase",
            },
            {
              "textAlign": "left",
            },
          ]
        }
      >
        3/5
      </Text>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 6,
          }
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderWidth": 1.5,
                "justifyContent": "center",
              },
              {
                "shadowColor": "rgba(16,185,129,0.55)",
                "shadowOffset": {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 12,
              },
              {
                "backgroundColor": "rgba(16,185,129,0.18)",
                "borderColor": "#10b981",
                "borderRadius": 8,
                "height": 36,
                "width": 36,
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "JetBrainsMono-Bold",
                  "fontWeight": "700",
                },
                {
                  "color": "#d1fae5",
                  "fontSize": 17,
                },
              ]
            }
          >
            3
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderWidth": 1.5,
                "justifyContent": "center",
              },
              null,
              {
                "backgroundColor": "rgba(90,90,122,0.2)",
                "borderColor": "#5a5a7a",
                "borderRadius": 8,
                "height": 36,
                "width": 36,
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "JetBrainsMono-Bold",
                  "fontWeight": "700",
                },
                {
                  "color": "#5a5a7a",
                  "fontSize": 17,
                },
              ]
            }
          >
            7
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderWidth": 1.5,
                "justifyContent": "center",
              },
              {
                "shadowColor": "rgba(245,158,11,0.4)",
                "shadowOffset": {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 12,
              },
              {
                "backgroundColor": "rgba(245,158,11,0.2)",
                "borderColor": "#f59e0b",
                "borderRadius": 8,
                "height": 36,
                "width": 36,
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "JetBrainsMono-Bold",
                  "fontWeight": "700",
                },
                {
                  "color": "#fde68a",
                  "fontSize": 17,
                },
              ]
            }
          >
            2
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderWidth": 1.5,
                "justifyContent": "center",
              },
              null,
              {
                "backgroundColor": "rgba(90,90,122,0.2)",
                "borderColor": "#5a5a7a",
                "borderRadius": 8,
                "height": 36,
                "width": 36,
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "JetBrainsMono-Bold",
                  "fontWeight": "700",
                },
                {
                  "color": "#5a5a7a",
                  "fontSize": 17,
                },
              ]
            }
          >
            9
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Mode7Row always renders on the left side regardless of incoming side prop 1`] = `
<View
  style={
    [
      {
        "marginBottom": 12,
        "maxWidth": "92%",
      },
      {
        "alignSelf": "flex-start",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "gap": 8,
        },
        {
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "alignSelf": "flex-start",
          },
          undefined,
          {
            "borderRadius": 11,
            "height": 22,
            "shadowColor": "#047857",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.5,
            "shadowRadius": 10,
            "width": 22,
          },
        ]
      }
    >
      <ViewManagerAdapter_ExpoLinearGradient
        colors={
          [
            4281652121,
            4278483031,
          ]
        }
        endPoint={
          [
            1,
            1,
          ]
        }
        startPoint={
          [
            0,
            0,
          ]
        }
        style={
          [
            {
              "alignItems": "center",
              "justifyContent": "center",
            },
            {
              "borderRadius": 11,
              "height": 22,
              "width": 22,
            },
          ]
        }
      >
        <Text
          accessibilityLabel="Nova"
          style={
            [
              {
                "color": "#ffffff",
                "fontFamily": "ChakraPetch-Bold",
                "fontWeight": "700",
              },
              {
                "fontSize": 9,
                "textShadowColor": "rgba(255,255,255,0.2)",
              },
            ]
          }
        >
          N
        </Text>
      </ViewManagerAdapter_ExpoLinearGradient>
    </View>
    <View
      style={
        {
          "gap": 4,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 6,
          }
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderWidth": 1.5,
                "justifyContent": "center",
              },
              {
                "shadowColor": "rgba(16,185,129,0.55)",
                "shadowOffset": {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 12,
              },
              {
                "backgroundColor": "rgba(16,185,129,0.18)",
                "borderColor": "#10b981",
                "borderRadius": 8,
                "height": 36,
                "width": 36,
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "JetBrainsMono-Bold",
                  "fontWeight": "700",
                },
                {
                  "color": "#d1fae5",
                  "fontSize": 17,
                },
              ]
            }
          >
            3
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderWidth": 1.5,
                "justifyContent": "center",
              },
              null,
              {
                "backgroundColor": "rgba(90,90,122,0.2)",
                "borderColor": "#5a5a7a",
                "borderRadius": 8,
                "height": 36,
                "width": 36,
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "JetBrainsMono-Bold",
                  "fontWeight": "700",
                },
                {
                  "color": "#5a5a7a",
                  "fontSize": 17,
                },
              ]
            }
          >
            7
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderWidth": 1.5,
                "justifyContent": "center",
              },
              {
                "shadowColor": "rgba(245,158,11,0.4)",
                "shadowOffset": {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 12,
              },
              {
                "backgroundColor": "rgba(245,158,11,0.2)",
                "borderColor": "#f59e0b",
                "borderRadius": 8,
                "height": 36,
                "width": 36,
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "JetBrainsMono-Bold",
                  "fontWeight": "700",
                },
                {
                  "color": "#fde68a",
                  "fontSize": 17,
                },
              ]
            }
          >
            2
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderWidth": 1.5,
                "justifyContent": "center",
              },
              null,
              {
                "backgroundColor": "rgba(90,90,122,0.2)",
                "borderColor": "#5a5a7a",
                "borderRadius": 8,
                "height": 36,
                "width": 36,
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "JetBrainsMono-Bold",
                  "fontWeight": "700",
                },
                {
                  "color": "#5a5a7a",
                  "fontSize": 17,
                },
              ]
            }
          >
            9
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
